# data_deduplication_service

./: CMakeLists.txt  Dockerfile  FileLineEdit_8cpp.html  FileLineEdit_8cpp__incl.map  FileLineEdit_8cpp__incl.md5  FileLineEdit_8h.html  FileLineEdit_8h.js  FileLineEdit_8h__dep__incl.map  FileLineEdit_8h__dep__incl.md5  FileLineEdit_8h__incl.map  FileLineEdit_8h__incl.md5  FileLineEdit_8h_source.html  FileService_8cpp.html  FileService_8cpp__incl.map  FileService_8cpp__incl.md5  FileService_8h.html  FileService_8h__dep__incl.map  FileService_8h__dep__incl.md5  FileService_8h__incl.map  FileService_8h__incl.md5  FileService_8h_source.html  HashUtils_8cpp.html  HashUtils_8cpp__incl.map  HashUtils_8cpp__incl.md5  HashUtils_8h.html  HashUtils_8h.js  HashUtils_8h__dep__incl.map  HashUtils_8h__dep__incl.md5  HashUtils_8h__incl.map  HashUtils_8h__incl.md5  HashUtils_8h_source.html  MainWindow_8cpp.html  MainWindow_8cpp.js  MainWindow_8cpp__incl.map  MainWindow_8cpp__incl.md5  MainWindow_8h.html  MainWindow_8h__dep__incl.map  MainWindow_8h__dep__incl.md5  MainWindow_8h__incl.map  MainWindow_8h__incl.md5  (+595 more)
.github/workflows/: benchmark.yml  ci.yml  docker_build.yml  documentation.yml
conf/: config.txt
doc/: Doxyfile.in  README.md  arhitecture.md  benchmarks.md  implementationDetails.md  install.md  testing.md  workflows.md
doc/diagrams/: arhc.drawio  database.drawio  database2.drawio  deleteFile.drawio  loadFile.drawio  processFile.drawio  ui.drawio  ui2.drawio
doc/md/: mainpage.md
documentation/: CMakeLists.txt  Doxyfile.in
include/: ClockArray.h  FileService.h  HashUtils.h  ServiceFileInterface.h  clockArray.h  common.h  dbCommon.h  dbManager.h  expected.hpp  fileUtils.h  lib.h  myConcepts.h  myConnString.h  myconcepts.h
lib/: FileService.cpp  clockArray.cpp  dbCommon.cpp  dbManager.cpp  fileUtils.cpp  myConcepts.cpp
resources/styleshhets/: widget.qss
scripts/: initdb.sql
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+70 more)
service/: CMakeLists.txt  db_create_data_write_test.cpp  fileServiceTest.cpp  main.cpp  main2.cpp  main3.cpp  opcvtest.cpp  pathing.cpp
service/FileUtils/: ServiceFileInterface.h
service/common/: myconcepts.cpp  myconcepts.h
service/dbUtils/: dbManager.cpp  dbManager.h  lib.h
service/res/: config.txt
source/service/: CMakeLists.txt  fileServiceTest.cpp  main.cpp  main2.cpp
source/service/FileUtils/: ServiceFileInterface.cpp  ServiceFileInterface.h
source/service/common/: ClockArray.cpp  ClockArray.h  expected.hpp  myconcepts.h
source/service/dbUtils/: dbManager.h  lib.h
source/test/: CMakeLists.txt  classWrappers.h  testUtils.h
source/test/clock_array_tests/: CMakeLists.txt  clock_array_interface_tests.cpp  clock_array_test.cpp  commont.h
source/test/dedup_service_it_tests/: CMakeLists.txt  DataBaseManagerTests.cpp  testClasses.h
source/test/dedup_service_it_tests/res/: config.txt
src/: FileLineEdit.cpp  FileLineEdit.h  FileService.cpp  HashUtils.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyPqxxModel.cpp  MyPqxxModel.h  ServiceFileInterface.cpp  SettingsWindow.cpp  SettingsWindow.h  clockArray.cpp  common.cpp  common.h  dbCommon.cpp  fileServiceTest.cpp  lib.cpp  main.cpp  main2.cpp  myConcepts.cpp  myPqxxModel.cpp  myPqxxModel.h  myconcepts.cpp  qledindicator.cpp  qledindicator.h  runQt.cpp
src/exampl/: fileServiceTest.cpp  main.cpp
test/: CMakeLists.txt  bencmark.cpp  testUtils.h
test/clock_array/: clock_array_interface_tests.cpp  clock_array_test.cpp  commont.h
test/files_service_IT/: DataBaseManagerTests.cpp  FileServiceTest.cpp  classWrappers.h  dbFile_load_delete_tests.cpp  fileServiceTests.cpp  testClasses.h
test/test_data/fixture/nested_directories/N_3/N_2/N_1/N_0/: 32blocks.txt
test/test_data/fixture/nested_directories/n1/n2/: install_usage.md
testDirectories/res/: 1_5_block.txt  1block.txt
